<resources>
    <string name="app_name">EpiAndroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="country_prompt">choisissez une ville</string>
    <string name="year_prompt">choisissez une année</string>
    <string-array name="country_array">
        <item>Lyon</item>
        <item>Paris</item>
        <item>Marseille</item>
        <item>Bordeaux</item>
        <item>Lille</item>
        <item>Montpellier</item>
        <item>Nancy</item>
        <item>Nantes</item>
        <item>Nice</item>
        <item>Rennes</item>
        <item>Strasbourg</item>
        <item>Toulouse</item>
    </string-array>

    <string name="Lyon">FR/LYN</string>
    <string name="Paris">FR/PAR</string>
    <string name="Marseille">FR/MAR</string>
    <string name="Bordeaux">FR/BDX</string>
    <string name="Lille">FR/LIL</string>
    <string name="Montpellier">FR/MPL</string>
    <string name="Nancy">FR/NCY</string>
    <string name="Nantes">FR/NAN</string>
    <string name="Nice">FR/NCE</string>
    <string name="Rennes">FR/REN</string>
    <string name="Strasbourg">FR/STG</string>
    <string name="Toulouse">FR/TLS</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Déconnexion</string>
    <string name="title_activity_login">Login</string>
    <string name="action_mmodules">Mes modules</string>
    <string name="action_main">Main</string>
    <string name="action_planning">Planning</string>
    <string name="action_profil">Profil</string>
    <string name="action_modules">Modules</string>
    <string name="title_activity_usr">Profile</string>

    <string name="complete_name">Prenom Nom</string>
    <string name="email">email@email.com</string>

    <string name="cycle">Cycle</string>
    <string name="cycle2">cycle</string>
    <string name="credits">Crédits acquis</string>

    <string name="start">start</string>
    <string name="end">end</string>
    <string name="token">token</string>
    <string name="default_shared">default</string>
    <string name="login">login</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="nom">nom</string>
    <string name="prenom">prenom</string>
    <string name="picture">picture</string>
    <string name="mail">internal_email</string>
    <string name="none">N/A</string>
    <string name="userinfo">userinfo</string>
    <string name="telephone">telephone</string>
    <string name="value">value</string>
    <string name="tel">tel:</string>
    <string name="txtp">text/plain</string>
    <string name="contact">Contacter via Email</string>
    <string name="items">items</string>
    <string name="crd">credits</string>
    <string name="event">Evénement</string>
    <string name="student_grade">student_grade</string>
    <string name="description">description</string>
    <string name="begin">begin</string>
    <string name="end_register">end_register</string>
    <string name="student_registered">student_registered</string>
    <string name="format">yyyy-MM-dd</string>
    <string name="format2">yyyy-MM-dd HH:mm:ss</string>
    <string name="nb1">1</string>
    <string name="activites">activites</string>
    <string name="url_epitech">https://intra.epitech.eu</string>
    <string name="sms_body">sms_body</string>
    <string name="smsto">smsto:</string>
    <string name="itsms">vnd.android-dir/mms-sms</string>
    <string name="Inscription">Inscription</string>
    <string name="Desinscription">Désinscription</string>
    <string name="strpro">J\'aimerais partager avec toi ma note :) :</string>
    <string name="strppro">Pas encore de note pour ce projet :(</string>
    <string name="strmod">J\'aimerais partager avec toi mon grade :) :</string>
    <string name="strpmod">Pas encore de grade pour ce module :(</string>
    <string name="toast1">Erreur, aucune date limite pour ce projet :/</string>
    <string name="toast2">La date limite est dépassée :/</string>
    <string name="allow">allow_register</string>
    <string name="no">Inscription non permise !</string>

    <string name="scolaryear">scolaryear</string>
    <string name="scl">scl</string>
    <string name="loca">loca</string>
    <string name="course">course</string>
    <string name="modules">modules</string>
    <string name="location">location</string>
    <string name="coursecode">course_code</string>
    <string name="Trombi">Trombi</string>
    <string name="sem">sem</string>
    <string name="title">title</string>
    <string name="codemodule">codemodule</string>
    <string name="codeinstance">codeinstance</string>
    <string name="codeacti">codeacti</string>
    <string name="codeevent">codeevent</string>
    <string name="tokenvalidationcode">tokenvalidationcode</string>
    <string name="gpa">gpa</string>
    <string name="GPA">GPA :</string>

    <string name="tokenok">Vous avez validé votre token !</string>

    <string name="log">Log : </string>
    <string name="nsstat">nsstat</string>
    <string name="active">active</string>
    <string name="errormessages">Erreur dans le chargement des messages</string>
    <string name="messages">messages</string>

    <string name="janvier">Janvier</string>
    <string name="fevrier">Février</string>
    <string name="mars">Mars</string>
    <string name="avril">Avril</string>
    <string name="mai">Mai</string>
    <string name="juin">Juin</string>
    <string name="juillet">Juillet</string>
    <string name="aout">Aout</string>
    <string name="septembre">Septembre</string>
    <string name="octobre">Octobre</string>
    <string name="novembre">Novembre</string>
    <string name="decembre">Décembre</string>

    <string name="preferences">epiandroidprefs</string>

    <string name="url_login">https://epitech-api.herokuapp.com/login</string>
    <string name="url_infos">https://epitech-api.herokuapp.com/infos</string>
    <string name="url_user">https://epitech-api.herokuapp.com/user</string>
    <string name="url_messages">https://epitech-api.herokuapp.com/messages</string>
    <string name="url_mymodules">https://epitech-api.herokuapp.com/modules</string>
    <string name="url_modules">https://epitech-api.herokuapp.com/allmodules</string>
    <string name="url_getmodule">https://epitech-api.herokuapp.com/module</string>
    <string name="url_planning">https://epitech-api.herokuapp.com/planning</string>
    <string name="url_trombi">https://epitech-api.herokuapp.com/trombi</string>
    <string name="url_usr">https://epitech-api.herokuapp.com/user</string>
    <string name="url_token">https://epitech-api.herokuapp.com/token</string>
    <string name="url_susproj">https://epitech-api.herokuapp.com/project</string>
    <string name="url_pdf">https://epitech-api.herokuapp.com/project/files</string>
    <string name="url_event">https://epitech-api.herokuapp.com/event</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_module">ModuleActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_event">EventActivity</string>
</resources>
