<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_main" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/action_main" />
        <item android:id="@+id/nav_planning" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/action_planning" />
        <item android:id="@+id/nav_profile" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/action_profil" />
        <item android:id="@+id/nav_mmodules" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/action_mmodules" />
        <item android:id="@+id/nav_modules" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/action_modules" />
        <item android:id="@+id/nav_trombi" android:icon="@android:drawable/ic_menu_manage"
            android:title="Trombi" />
    </group>

</menu>