<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.ProfileFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="16dp"
        android:background="#c6c6c6">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/imgProfile"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/nopicture" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_name"
            android:id="@+id/txtCompleteName"
            android:layout_alignTop="@+id/imgProfile"
            android:layout_toEndOf="@+id/imgProfile"
            android:layout_toRightOf="@+id/imgProfile"
            android:layout_marginLeft="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/txtMail"
            android:layout_below="@+id/txtCompleteName"
            android:layout_alignLeft="@+id/txtCompleteName"
            android:layout_alignStart="@+id/txtCompleteName"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtGpa"
            android:layout_below="@+id/txtMail"
            android:layout_alignLeft="@+id/txtMail"
            android:layout_alignStart="@+id/txtMail"
            android:layout_marginTop="5dp"
            android:text="@string/cycle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:id="@+id/txtCredits"
            android:layout_below="@+id/txtGpa"
            android:layout_alignLeft="@+id/txtGpa"
            android:layout_alignStart="@+id/txtGpa"
            android:layout_marginTop="5dp" />
    </RelativeLayout>
</RelativeLayout>
